<resources>
    <string name="app_name">My Movies</string>
    <string name="my_movies">MY MOVIES</string>
    <string name="register_movie">Register Movie</string>
    <string name="display_movies">Display Movies</string>
    <string name="favourites">Favourites</string>
    <string name="edit_movies">Edit Movies</string>
    <string name="search">Search</string>
    <string name="ratings">Ratings</string>
    <string name="movie_name">Movie name</string>
    <string name="textview">TextView</string>
    <string name="image">image</string>
    <string name="favourite">Favourite</string>
    <string name="movies_list">MOVIES LIST</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="save">Save</string>
</resources>